Fix: Tree overflow out of VH

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,7 +33,7 @@
 
   .MuiTreeView-root {
     padding: 0% 5% !important;
-    height: 100vh;
+    height: 90vh;
     width: calc(var(--sidebar-width) - 3vw);
   }
 }
